# online_learning

./: .gitignore  CMakeLists.txt
data/: am.pcd  camera_params.txt
include/ol/: Constants.h  CrossValidator.h  Dataset.h  ExpGradDescent.h  Logistic.h  MultiClassExp.h  MultiClassKernelSVM.h  MultiClassLogistic.h  MultiClassPredictor.h  MultiClassSVM.h  OneVsAll.h  Predictor.h  Test.h  Validator.h  Visualizer.h  Winnow.h
latex/: build.sh  report.tex
py/: parseData.py
src/: CrossValidator.cpp  Dataset.cpp  ExpGradDescent.cpp  Logistic.cpp  MultiClassExp.cpp  MultiClassKernelSVM.cpp  MultiClassLogistic.cpp  MultiClassPredictor.cpp  MultiClassSVM.cpp  OneVsAll.cpp  Test.cpp  Validator.cpp  Visualizer.cpp  cross_validate.cpp  run_tests.cpp
